projeler/Embedded systems/STM32CubeIDE/.metadata/.plugins/org.eclipse.cdt.ui/303re-sht30.build.log
16:05:54 **** Incremental Build of configuration Debug for project 303re-sht30 ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/SHT30_I2C_Driver.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F303xE -c -I../Core/Inc -I../Drivers/STM32F3xx_HAL_Driver/Inc -I../Drivers/STM32F3xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F3xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/SHT30_I2C_Driver.d" -MT"Core/Src/SHT30_I2C_Driver.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/SHT30_I2C_Driver.o"
../Core/Src/SHT30_I2C_Driver.c:17:8: error: unknown type name 'uint8_t'
   17 | static uint8_t SHT30_Send_Cmd(SHT30_CMD cmd)
      |        ^~~~~~~
../Core/Src/SHT30_I2C_Driver.c:17:31: error: unknown type name 'SHT30_CMD'
   17 | static uint8_t SHT30_Send_Cmd(SHT30_CMD cmd)
      |                               ^~~~~~~~~
../Core/Src/SHT30_I2C_Driver.c:30:1: error: unknown type name 'uint8_t'
   30 | uint8_t SHT30_ValGet(uint8_t* dat)
      | ^~~~~~~
../Core/Src/SHT30_I2C_Driver.c:30:22: error: unknown type name 'uint8_t'
   30 | uint8_t SHT30_ValGet(uint8_t* dat)
      |                      ^~~~~~~
../Core/Src/SHT30_I2C_Driver.c: In function 'SHT30_reset':
../Core/Src/SHT30_I2C_Driver.c:51:5: warning: implicit declaration of function 'SHT30_Send_Cmd' [-Wimplicit-function-declaration]
   51 |     SHT30_Send_Cmd(SOFT_RESET_CMD);
      |     ^~~~~~~~~~~~~~
../Core/Src/SHT30_I2C_Driver.c:51:20: error: 'SOFT_RESET_CMD' undeclared (first use in this function)
   51 |     SHT30_Send_Cmd(SOFT_RESET_CMD);
      |                    ^~~~~~~~~~~~~~
../Core/Src/SHT30_I2C_Driver.c:51:20: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/SHT30_I2C_Driver.c:52:5: warning: implicit declaration of function 'HAL_Delay' [-Wimplicit-function-declaration]
   52 |     HAL_Delay(20);
      |     ^~~~~~~~~
../Core/Src/SHT30_I2C_Driver.c: At top level:
../Core/Src/SHT30_I2C_Driver.c:61:1: error: unknown type name 'uint8_t'
   61 | uint8_t SHT30_Init(void)
      | ^~~~~~~
../Core/Src/SHT30_I2C_Driver.c: In function 'SHT30_Init':
../Core/Src/SHT30_I2C_Driver.c:63:27: error: 'MEDIUM_2_CMD' undeclared (first use in this function)
   63 |     return SHT30_Send_Cmd(MEDIUM_2_CMD);
      |                           ^~~~~~~~~~~~
../Core/Src/SHT30_I2C_Driver.c: At top level:
../Core/Src/SHT30_I2C_Driver.c:72:1: error: unknown type name 'uint8_t'
   72 | uint8_t SHT30_Read_Dat(uint8_t* dat)
      | ^~~~~~~
../Core/Src/SHT30_I2C_Driver.c:72:24: error: unknown type name 'uint8_t'
   72 | uint8_t SHT30_Read_Dat(uint8_t* dat)
      |                        ^~~~~~~
../Core/Src/SHT30_I2C_Driver.c:80:1: error: unknown type name 'uint8_t'
   80 | uint8_t CheckCrc8(uint8_t* const message, uint8_t initial_value)
      | ^~~~~~~
../Core/Src/SHT30_I2C_Driver.c:80:19: error: unknown type name 'uint8_t'
   80 | uint8_t CheckCrc8(uint8_t* const message, uint8_t initial_value)
      |                   ^~~~~~~
../Core/Src/SHT30_I2C_Driver.c:80:43: error: unknown type name 'uint8_t'
   80 | uint8_t CheckCrc8(uint8_t* const message, uint8_t initial_value)
      |                                           ^~~~~~~
../Core/Src/SHT30_I2C_Driver.c:117:1: error: unknown type name 'uint8_t'
  117 | uint8_t SHT30_Dat_To_Float(uint8_t* const dat, float* temperature, float* humidity)
      | ^~~~~~~
../Core/Src/SHT30_I2C_Driver.c:117:28: error: unknown type name 'uint8_t'
  117 | uint8_t SHT30_Dat_To_Float(uint8_t* const dat, float* temperature, float* humidity)
      |                            ^~~~~~~
../Core/Src/SHT30_I2C_Driver.c: In function 'SHT30_Init':
../Core/Src/SHT30_I2C_Driver.c:64:1: warning: control reaches end of non-void function [-Wreturn-type]
   64 | }
      | ^
make: *** [Core/Src/subdir.mk:37: Core/Src/SHT30_I2C_Driver.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

16:05:54 Build Failed. 15 errors, 3 warnings. (took 413ms)

